# homebuhg_desktop_rust

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: accounts.rs  budgets.rs  categories.rs  export.rs  merchants.rs  mod.rs  operations.rs  recurring.rs  reports.rs  session.rs  sync.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/domain/: balance.rs  mod.rs  session.rs
src-tauri/src/models/: account.rs  budget.rs  category.rs  household.rs  merchant.rs  mod.rs  money.rs  receipt_item.rs  recurring.rs  transaction.rs
src-tauri/src/repository/: accounts.rs  budgets.rs  categories.rs  households.rs  merchants.rs  mod.rs  receipt_items.rs  recurring.rs  transactions.rs
src-tauri/src/sync/: auth.rs  firestore.rs  mapper.rs  mod.rs  sync_service.rs
src/components/: Button.tsx  Layout.tsx  Modal.tsx  PageHeader.tsx
src/features/accounts/: AccountEditDialog.tsx  AccountsPage.tsx
src/features/budgets/: BudgetEditDialog.tsx  BudgetsPage.tsx
src/features/categories/: CategoriesPage.tsx
src/features/home/: HomePage.tsx
src/features/operations/: OperationEditDialog.tsx  OperationsPage.tsx  ReceiptItemDialog.tsx
src/features/recurring/: RecurringEditDialog.tsx  RecurringPage.tsx
src/features/reports/: ReportsPage.tsx
src/features/settings/: SettingsPage.tsx
src/lib/: api.ts  format.ts  types.ts
src/store/: session.ts
